Updates for nav and titles for pages
Changed titles and added div class=“content” to all pages for format.
Got the title/header for each page to change in the nav with macro and
a variable.

--- a/tinker/admin/redirects/templates/redirects.html
+++ b/tinker/admin/redirects/templates/redirects.html
@@ -1,184 +1,188 @@
 {% extends "tinker_base.html" %}
 
-{% block title %}Redirects{% endblock %}
+{% set title = 'Redirects' %}
 
 {% block page_title %}Redirects{% endblock %}
 
 {% block row_width %}12{% endblock %}
 
 {% block main_content %}
-<form action="" id="new-redirect-form">
-  <div class="row">
-    <div class="large-6 columns">
-      <label>From Path
-        <input type="text" name="new-redirect-from" id="new-redirect-from"/>
-      </label>
+    <div class="content">
+        <form action="" id="new-redirect-form">
+            <div class="row">
+                <div class="large-6 columns">
+                    <label>From Path
+                        <input type="text" name="new-redirect-from" id="new-redirect-from"/>
+                    </label>
+                </div>
+                <div class="large-6 columns">
+                    <label>To URL
+                        <input type="text" name="new-redirect-to" id="new-redirect-to"/>
+                    </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="large-6 columns">
+                    <label> Expiration Date.
+                        <input type="text" name="expiration-date" id="expiration-date" class="datepicker">
+                    </label>
+                </div>
+                <div class="large-6 columns">
+                    <label> Short URL
+                        <input type="checkbox" name="short-url" id="short-url"/>
+                    </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="large-12 columns" id="form-save-button"></div>
+            </div>
+        </form>
+
+        <div class="row">
+            <div class="large-12 columns">
+                <table>
+                    <thead>
+                    <tr>
+                        <th width="400">From Path</th>
+                        <th width="400">To URL</th>
+                        <th width="400">Expiration Date</th>
+                    </tr>
+                    </thead>
+                    <tbody id="redirects-table">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+
+        <script type="text/javascript">
+
+            function updateTable(data) {
+                $("#redirects-table").html(data);
+                $('#new-redirect-to').attr("disabled", false)
+                //should the inputs be disabled?
+                var search_val = $("#new-redirect-from").val();
+                $(".from_path").each(function () {
+                    var this_val = $(this).html();
+                    if (search_val == this_val) {
+                        $("#new-redirect-to").val('');
+                        $('#new-redirect-to').attr("disabled", true);
+                        return false;
+                    }
+                });
+                $(".redirect-row").on('click', function () {
+                    $("#modal-confirm").attr("data-delete-path", $(this).find('.from_path').html());
+                    $(document).foundation();
+                    $("#confirmModal").foundation('reveal', 'open');
+                });
+            }
+
+            var delay = (function () {
+                var timer = 0;
+                return function (callback, ms) {
+                    clearTimeout(timer);
+                    timer = setTimeout(callback, ms);
+                };
+            })();
+
+            function showAdd() {
+                $("#new-redirect-to").show();
+                $("#redirect-add").show();
+            }
+
+            function loadTableForSearch(search_value, type) {
+                // type needs to be either 'from_path' or 'to_url'
+                var search = {'type': type, 'search': search_value};
+                var url = "{{ url_for('redirects.RedirectsView:search') }}";
+                $.post(url, search, function (data) {
+                    updateTable(data);
+                });
+            }
+
+            $('#new-redirect-to').keyup(function () {
+                var input = $(this);
+                input.val(input.val().replace(/ /g, ''));
+                var value = input.val();
+                {#    delay(function(){#}
+                {#      loadTableForSearch(value, 'to_url');#}
+                {#    }, 300 );#}
+            });
+
+            $('#new-redirect-from').keyup(function () {
+                var input = $(this);
+                input.val(input.val().replace(/ /g, ''));
+                var value = input.val();
+                if (value[0] != '/' && value.length > 0) {
+                    input.val("/" + value);
+                    value = input.val();
+                }
+                delay(function () {
+                    loadTableForSearch(value, 'from_path');
+                }, 300);
+            });
+
+            $(document).ready(function () {
+
+                var d = document;
+                var input = $(d.createElement('input'));
+                input.attr('value', 'Save');
+                input.attr('type', 'button');
+                input.attr('id', 'redirect-add');
+                input.attr('class', 'button postfix');
+                {#    input.attr('style', 'display:none');#}
+                input.click(function (event) {
+                    console.log("BUTTON WAS CLICKED");
+                    document.getElementById('redirect-add').disabled = true;
+                    // when 'save' is clicked, gather the field mappings and send those
+                    // to the wufoo-silva app for storage
+                    var fieldMappings = $(this.form).serializeArray(),
+                            url = "{{ url_for('redirects.RedirectsView:new_redirect_submit') }}";
+
+                    $.post(url, fieldMappings, function (data) {
+                        loadTableForSearch($("#new-redirect-from").val(), 'from_path');
+                        document.getElementById('redirect-add').disabled = false;
+                    });
+
+                });
+                $("#form-save-button").append(input);
+
+                $("#modal-confirm").click(function () {
+                    var from_path = {"from_path": $(this).attr('data-delete-path')};
+                    var url = "{{ url_for('redirects.RedirectsView:delete_redirect') }}";
+                    $.post(url, from_path, function (data) {
+                        if (data) {
+                            loadTableForSearch($("#new-redirect-from").val(), 'from_path');
+                            $("#confirmModal").foundation('reveal', 'close');
+                        }
+                    });
+                });
+
+            });
+
+        </script>
+
+        {#Delete confirm modal#}
+        <div id="confirmModal" class="reveal-modal" data-reveal>
+            <h2>Are you sure you want to delete?</h2>
+            <p class="lead">The redirect will be gone forever and forever.</p>
+
+            <button class="modal-confirm" id="modal-confirm" data-delete-path="/delete/path">Delete</button>
+            <a class="close-reveal-modal">&#215;</a>
+        </div>
     </div>
-    <div class="large-6 columns">
-      <label>To URL
-        <input type="text" name="new-redirect-to" id="new-redirect-to" />
-      </label>
-    </div>
-  </div>
-  <div class="row">
-    <div class="large-6 columns">
-      <label> Expiration Date.
-          <input type="text" name="expiration-date" id="expiration-date" class="datepicker">
-      </label>
-    </div>
-    <div class="large-6 columns">
-      <label> Short URL
-          <input type="checkbox" name="short-url" id="short-url" />
-      </label>
-    </div>
-  </div>
-  <div class="row">
-    <div class="large-12 columns" id="form-save-button"></div>
-  </div>
-</form>
-
-<div class="row">
-  <div class="large-12 columns">
-    <table >
-      <thead>
-        <tr>
-          <th width="400">From Path</th>
-          <th width="400">To URL</th>
-          <th width="400">Expiration Date</th>
-        </tr>
-      </thead>
-      <tbody id="redirects-table">
-      </tbody>
-    </table>
-  </div>
-</div>
-
-  <script type="text/javascript">
-
-  function updateTable(data){
-      $("#redirects-table").html(data);
-      $('#new-redirect-to').attr("disabled", false)
-      //should the inputs be disabled?
-      var search_val = $("#new-redirect-from").val();
-      $(".from_path").each(function(){
-        var this_val = $(this).html();
-        if (search_val == this_val){
-          $("#new-redirect-to").val('');
-          $('#new-redirect-to').attr("disabled", true);
-          return false;
-        }
-      });
-      $( ".redirect-row" ).on('click', function(){
-        $("#modal-confirm").attr("data-delete-path", $(this).find('.from_path').html());
-        $(document).foundation();
-        $("#confirmModal").foundation('reveal', 'open');
-      });
-  }
-
-var delay = (function(){
-  var timer = 0;
-  return function(callback, ms){
-    clearTimeout (timer);
-    timer = setTimeout(callback, ms);
-  };
-})();
-
-  function showAdd(){
-    $("#new-redirect-to").show();
-    $("#redirect-add").show();
-  }
-
-  function loadTableForSearch(search_value, type){
-    // type needs to be either 'from_path' or 'to_url'
-    var search = {'type': type, 'search': search_value};
-    var url = "{{ url_for('redirects.RedirectsView:search') }}";
-      $.post(url, search, function(data) {
-          updateTable(data);
-      });
-  }
-
-  $('#new-redirect-to').keyup(function() {
-    var input = $(this);
-    input.val(input.val().replace(/ /g,''));
-    var value = input.val();
-{#    delay(function(){#}
-{#      loadTableForSearch(value, 'to_url');#}
-{#    }, 300 );#}
-  });
-
-  $('#new-redirect-from').keyup(function() {
-    var input = $(this);
-    input.val(input.val().replace(/ /g,''));
-    var value = input.val();
-    if (value[0] != '/' && value.length > 0) {
-      input.val("/" + value);
-      value = input.val();
-    }
-    delay(function(){
-      loadTableForSearch(value, 'from_path');
-    }, 300 );
-  });
-
-  $(document).ready(function(){
-
-    var d = document;
-    var input = $(d.createElement('input'));
-    input.attr('value', 'Save');
-    input.attr('type', 'button');
-    input.attr('id', 'redirect-add');
-    input.attr('class', 'button postfix');
-{#    input.attr('style', 'display:none');#}
-    input.click(function (event) {
-        console.log("BUTTON WAS CLICKED");
-      document.getElementById('redirect-add').disabled = true;
-        // when 'save' is clicked, gather the field mappings and send those
-        // to the wufoo-silva app for storage
-      var fieldMappings = $(this.form).serializeArray(),
-              url = "{{ url_for('redirects.RedirectsView:new_redirect_submit') }}";
-
-      $.post(url, fieldMappings, function(data) {
-          loadTableForSearch($("#new-redirect-from").val(), 'from_path');
-          document.getElementById('redirect-add').disabled = false;
-      });
-
-    });
-    $("#form-save-button").append(input);
-
-    $("#modal-confirm").click(function(){
-      var from_path = {"from_path": $(this).attr('data-delete-path')};
-      var url = "{{ url_for('redirects.RedirectsView:delete_redirect') }}";
-      $.post(url, from_path, function(data) {
-        if (data){
-          loadTableForSearch($("#new-redirect-from").val(), 'from_path');
-          $("#confirmModal").foundation('reveal', 'close');
-        }
-      });
-    });
-
-  });
-
-</script>
-
-{#Delete confirm modal#}
-<div id="confirmModal" class="reveal-modal" data-reveal>
-  <h2>Are you sure you want to delete?</h2>
-  <p class="lead">The redirect will be gone forever and forever.</p>
-
-  <button class="modal-confirm" id="modal-confirm" data-delete-path="/delete/path">Delete</button>
-  <a class="close-reveal-modal">&#215;</a>
-</div>
 
 {% endblock %}
 
 
 {% block scripts %}
-<link rel="stylesheet" href="{{ url_for('static', filename='pikaday.css') }}">
-<script src="{{ url_for('static', filename='pikaday.js') }}"></script>
-<script src="{{ url_for('static', filename='pikaday.jquery.js') }}"></script>
-<script>
-$( document ).ready(function() {
-  var picker = new Pikaday({
-          field: document.getElementById('expiration-date')});
-});
-</script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='pikaday.css') }}">
+    <script src="{{ url_for('static', filename='pikaday.js') }}"></script>
+    <script src="{{ url_for('static', filename='pikaday.jquery.js') }}"></script>
+    <script>
+        $(document).ready(function () {
+            var picker = new Pikaday({
+                field: document.getElementById('expiration-date')
+            });
+        });
+    </script>
 {% endblock %}
