--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -2,7 +2,8 @@
 {#{% import 'nav.html' as nav %}#}
 {#{% import 'creativeTim_footer.html' as footer %}#}
 
-{% block title %}Home{% endblock %}
+{% set title = 'Home' %}
+{#{% block title %}Home{% endblock %}#}
 
 {% block main_content %}
     <div class="content">
