--- a/tinker/templates/tinker_base.html
+++ b/tinker/templates/tinker_base.html
@@ -1,7 +1,6 @@
 {% extends 'creativeTim_base.html' %}
 {% import 'creativeTim_sidebar.html' as sidebar %}
 {% import 'nav.html' as nav %}
-{% import 'creativeTim_nav_collapse.html' as nav_collapse %}
 {% import 'creativeTim_footer.html' as footer %}
 
 {% block title %}{{ title }} | Tinker{% endblock %}
@@ -13,7 +12,8 @@
         {{ sidebar.render() }}
 
         <div class="main-panel">
-            {{ nav.render() }}
+
+            {{ nav.render(title) }}
 
             {% block main_content %}
             {% endblock %}
@@ -22,6 +22,5 @@
         </div>
 
     </div>
-    {{ nav_collapse.render() }}
 {% endblock %}
 </body>
