--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -1,4 +1,4 @@
-{% macro render() %}
+{% macro render(title) %}
 
     <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -9,7 +9,7 @@
                     <span class="icon-bar bar2"></span>
                     <span class="icon-bar bar3"></span>
                 </button>
-                <a class="navbar-brand" href="#">Home</a>
+                <a class="navbar-brand" href="#">{{ title }}</a>
             </div>
         </div>
     </nav>
