fixed the more-info in the publish manager

--- a/tinker/admin/publish/templates/publish-home.html
+++ b/tinker/admin/publish/templates/publish-home.html
@@ -104,8 +104,10 @@
   </div>
 </div>
 
-
+<script src="{{ url_for('static', filename='csrf-activator.js') }}"></script>
 <script type="text/javascript">
+var csrftoken = "{{ csrf_token() }}";
+activateCSRF(csrftoken);
 
 var delay = (function(){
   var timer = 0;
