--- a/tinker/admin/publish/templates/publish-more-info.html
+++ b/tinker/admin/publish/templates/publish-more-info.html
@@ -12,11 +12,7 @@
         </tr>
         <tr>
             <td>Type</td>
-            <td>{{ type }}</td>
-        </tr>
-        <tr>
-            <td>Description</td>
-            <td>{{ descriptiom }}</td>
+            <td>{{ info_type }}</td>
         </tr>
     </table>
 
