Started final refactors, created the inspect_child and _iterate_child_xml methods in Events_Controller

--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -123,7 +123,8 @@
 
 {% block scripts %}
 
-{#  Script to update the modal submit to delete the correct form#}
+{#  Script to update the modal submit to delete the correct form #}
+{#  todo add url_for() on the button of events-home.html #}
   <script type="text/javascript">
     $(".delete-press").click(function(){
       $("#modal-confirm").attr("href", "/event/delete/" + $(this).data('event-id'));
