--- a/tinker/templates/creativeTim_base.html
+++ b/tinker/templates/creativeTim_base.html
@@ -43,6 +43,8 @@
         {% block body_content %}
         {% endblock %}
 
+        {% block scripts %}{% endblock %}
+
          <!--   Core JS Files   -->
     <script src="http://127.0.0.1:5000/static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="http://127.0.0.1:5000/static/assets/js/bootstrap.min.js" type="text/javascript"></script>
