--- a/tinker/templates/creativeTim_base.html
+++ b/tinker/templates/creativeTim_base.html
@@ -27,10 +27,8 @@
             <!--  Paper Dashboard core CSS    -->
             <link href="http://127.0.0.1:5000/static/assets/css/paper-dashboard.css" rel="stylesheet"/>
 
-
-            <!--  CSS for Demo Purpose, don't include it in your project     -->
-            <link href="http://127.0.0.1:5000/static/assets/css/demo.css" rel="stylesheet"/>
-
+            <!-- Tinker's specific core CSS -->
+            <link href="http://127.0.0.1:5000/static/assets/css/tinker.css" rel="stylesheet"/>
 
             <!--  Fonts and icons     -->
             <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
@@ -40,10 +38,10 @@
     </head>
 
     <body>
-        {% block body_content %}
-        {% endblock %}
+    {% block body_content %}
+    {% endblock %}
 
-         <!--   Core JS Files   -->
+    <!--   Core JS Files   -->
     <script src="http://127.0.0.1:5000/static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="http://127.0.0.1:5000/static/assets/js/bootstrap.min.js" type="text/javascript"></script>
 
