--- a/tinker/static/assets/css/paper-dashboard.css
+++ b/tinker/static/assets/css/paper-dashboard.css
@@ -534,7 +534,7 @@ hr {
 
 .btn,
 .navbar .navbar-nav > li > a.btn {
-    border-radius: 20px;
+    /*border-radius: 20px;*/
     box-sizing: border-box;
     border-width: 2px;
     background-color: transparent;
@@ -1558,7 +1558,7 @@ textarea.form-control {
     border: 0;
     border-radius: 0;
     font-size: 16px;
-    z-index: 3;
+    /*z-index: 3;*/
 }
 
 .navbar .navbar-brand {
