--- a/tinker/templates/creativeTim_base.html
+++ b/tinker/templates/creativeTim_base.html
@@ -12,11 +12,14 @@
             <link rel="apple-touch-icon" sizes="76x76" href="http://127.0.0.1:5000/static/assets/img/apple-icon.png">
             <link rel="icon" type="image/png" sizes="96x96" href="http://127.0.0.1:5000/static/assets/img/favicon.png">
             <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+            <script src="{{ url_for('static', filename='jquery.js') }}"></script>
 
             <title>{% block title %}{{ title }}{% endblock %}</title>
 
             <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
             <meta name="viewport" content="width=device-width"/>
+
+            <link href="http://127.0.0.1:5000/static/assets/css/tinker.css" rel="stylesheet"/>
 
             <!-- Bootstrap core CSS     -->
             <link href="http://127.0.0.1:5000/static/assets/css/bootstrap.min.css" rel="stylesheet"/>
@@ -40,12 +43,12 @@
     </head>
 
     <body>
-        {% block body_content %}
-        {% endblock %}
+    {% block body_content %}
+    {% endblock %}
 
-        {% block scripts %}{% endblock %}
+    {% block scripts %}{% endblock %}
 
-         <!--   Core JS Files   -->
+    <!--   Core JS Files   -->
     <script src="http://127.0.0.1:5000/static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="http://127.0.0.1:5000/static/assets/js/bootstrap.min.js" type="text/javascript"></script>
 
