--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -9,7 +9,7 @@
     <div class="content">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 navbar-left">
                     <div class="card">
                         <div class="header">
                             <h4 class="title">Manage Events</h4>
@@ -21,7 +21,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 navbar-left">
                     <div class="card">
                         <div class="header">
                             <h4 class="title">Faculty Bios</h4>
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 navbar-left">
                     <div class="card">
                         <div class="header">
                             <h4 class="title">Manage E-Announcements</h4>
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 navbar-left">
                     <div class="card">
                         <div class="header">
                             <h4 class="title">Manage Redirects</h4>
