--- a/tinker/e_announcements/templates/ea-home.html
+++ b/tinker/e_announcements/templates/ea-home.html
@@ -98,11 +98,13 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default btn-simple" data-dismiss="modal">Close</button>
-                            <a href="/e-announcement/delete/formid" type="button" class="btn btn-info btn-simple">Delete</a>
+                            <a href="/e-announcement/delete/formid" type="button"
+                               class="btn btn-info btn-simple">Delete</a>
                         </div>
                     </div>
                 </div>
             </div>
+            </br>
         </div>
     </div>
 
